Add and test pmd rule